Fix .row gap when overflowing

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -107,7 +107,7 @@ a:active {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    gap: 0.5rem;
+    column-gap: 0.5rem;
 }
 
 .layout {
